# font2svg-api

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  renovate.json  requirements.txt  setup.py
.github/workflows/: release.yml
benchmarks/: baseline_c_1.txt  baseline_c_10.txt  baseline_c_100.txt  cache_file_c_1.txt  cache_file_c_10.txt  cache_file_c_100.txt  cache_mem_c_1.txt  cache_mem_c_10.txt  cache_mem_c_100.txt  cache_off_c_1.txt  cache_off_c_10.txt  cache_off_c_100.txt  file_cache_c_1.txt  file_cache_c_10.txt  file_cache_c_100.txt  mem_cache_c_1.txt  mem_cache_c_10.txt  mem_cache_c_100.txt
src/: benchmark.py  constants.py  converter.py  dependencies.py  main.py  svg_cache.py  utils.py
src/models/: cache.py  converter.py
src/routers/: fonts.py
templates/: .macros.j2  .micros.j2  .release_notes.md.j2
