[project]
    authors = [{ name = "Bean", email = "dengbin@bilibili.com" }]
    dependencies = [
        "black (>=26.1.0,<26.1.1)",
        "fastapi (>=0.135.1,<0.135.2)",
        "fonttools (>=4.61.1,<5.0.0)",
        "freetype-py (>=2.5.1,<3.0.0)",
        "python-multipart (>=0.0.22,<0.0.23)",
        "requests (>=2.32.5,<3.0.0)",
        "svgpathtools (>=1.7.2,<2.0.0)",
        "uvicorn (>=0.41.0,<0.41.1)",
        "yuanfen (>=2025.11.24.1,<2026.0.0.0)",
    ]
    description = "Font2svg server-side project, written in Python."
    license = { text = "MIT" }
    name = "font2svg-api"
    readme = "README.md"
    requires-python = ">=3.13"
    version = "0.1.0"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = ["poetry-core>=2.0.1,<3.0.0"]

[tool.isort]
    profile = "black"

[tool.black]
    line-length = 180

[tool.poetry]
    package-mode = false

[tool.semantic_release]
    commit_author = "Bean <dengbin@bilibili.com>"
    commit_message = "chore(release): v{version}"
    commit_parser = "angular"
    tag_format = "v{version}"
    version_variables = ["src/__init__.py:__version__"]

[tool.semantic_release.commit_parser_options]
    allowed_tags = [
        "build",
        "chore",
        "ci",
        "docs",
        "feat",
        "fix",
        "perf",
        "refactor",
        "style",
        "test",
    ]
    minor_tags = ["feat"]
    patch_tags = ["build", "fix", "perf", "refactor"]
